[package]
name = "obcore"
version = "0.1.5"
edition = "2024"
authors = ["itsstevenwal"]
description = "A single threaded, zero dependency price-time priority limit orderbook implementation in Rust."
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["order", "hft", "ob", "limit", "orderbook"]
repository = "https://github.com/itsstevenwal/obcore"

[features]
bench = []

[dependencies]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "bench"
harness = false
required-features = ["bench"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
inherits = "release"
